# Mangalator

./: LICENSE  README.md  detector.py  inpainter.py  main.py  ocr.py  pyproject.toml  translator.py
static/: app.css  app.js  index.html
