[project]
name = "mangalator"
version = "0.1.0"
description = "Manga translator — JP → PT-BR, runs locally"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.41.0",
    "python-multipart>=0.0.22",
    "pillow>=12.1.1",
    "opencv-python>=4.13.0.92",
    "manga-ocr>=0.1.14",
    "ctranslate2>=4.7.1",
    "argostranslate>=1.9.6",
    "onnxruntime==1.20.1", # 1.21+ drops cp310 — pin until you upgrade Python
    "multipart>=1.3.1",
    "ollama>=0.6.1",
    "dspy>=3.1.3",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124" },
]
torchvision = [
    { index = "pytorch-cu124" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv]
environments = ["sys_platform == 'linux'"]
